--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/node": "^18.11.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/v2-sdk": "^3.0.1",
     "classnames": "^2.3.2",
     "cra-template-typescript": "1.2.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "typescript": "^4.9.3"
